--- a/src/staff_webapp/src/app/components/sidebar/sidebar.component.html
+++ b/src/staff_webapp/src/app/components/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <div class="pt-5 px-5 flex flex-col items-center">
   <i class="fa-solid fa-user text-2xl lg:text-4xl text-slate-300 bg-white rounded-full w-10 h-10 lg:w-20 lg:h-20 flex items-center justify-center"></i>
-  <span class="mt-3 text-base font-medium hidden lg:inline-block">Admin</span>
+  <span class="mt-3 text-base font-medium hidden lg:inline-block">{{ accountName }}</span>
 </div>
 <div class="flex-col items-center p-5">
   <div *ngFor="let item of items; let i = index" 
@@ -15,7 +15,7 @@
     </div>
     <!-- Arrow indicator for active state -->
     <div class="hidden lg:block">
-      <i class="fa-solid fa-chevron-right pr-6 hidden lg:block" 
+      <i class="fa-solid fa-chevron-right pr-6" 
          [class.hidden]="!isRouteActive(item.routerLink)"
          [class.inline-block]="isRouteActive(item.routerLink)"></i>
     </div>
