--- a/src/staff_webapp/src/app/components/task-modal/task-modal.component.html
+++ b/src/staff_webapp/src/app/components/task-modal/task-modal.component.html
@@ -14,6 +14,7 @@
       <div class="flex items-center">
         <h2 class="text-2xl font-semibold">Task Details</h2>
         <button
+          *ngIf="canEdit"
           (click)="toggleEdit()"
           class="ml-3 text-brown"
         >
@@ -21,6 +22,7 @@
         </button>
         <!-- Delete icon next to edit -->
         <button
+          *ngIf="canDelete"
           (click)="openDeleteConfirmModal()"
           class="ml-3 text-red-700"
         >
