--- a/src/staff_webapp/src/app/pages/home-tab/home-tab.component.html
+++ b/src/staff_webapp/src/app/pages/home-tab/home-tab.component.html
@@ -1,1 +1,1 @@
-<!-- <h3 class="font-semibold text-5xl">Welcome, {{ accountName }}</h3> -->
+<h3 class="font-semibold text-5xl">Welcome, {{ accountName }}</h3>
