updated buttons in add/confirm-delete modals

--- a/src/staff_webapp/src/app/components/accounts-modal/confirm-deletion-modal.component.html
+++ b/src/staff_webapp/src/app/components/accounts-modal/confirm-deletion-modal.component.html
@@ -7,13 +7,13 @@
 
     <div class="flex justify-center mt-6 space-x-4">
       <button
-        class="bg-gray-300 text-black px-4 py-2 rounded"
+        class="bg-white border border-black text-black hover:bg-black hover:text-white p-2 rounded-lg w-20 mr-1"
         (click)="cancel.emit()"
       >
         Cancel
       </button>
       <button
-        class="bg-red-500 text-white px-4 py-2 rounded"
+        class="bg-white border border-red-700 text-red-700 hover:bg-red-700 hover:text-white p-2 rounded-lg w-20"
         (click)="confirm.emit()"
       >
         Delete
