--- a/src/staff_webapp/src/app/components/accounts-modal/add-account-modal.component.html
+++ b/src/staff_webapp/src/app/components/accounts-modal/add-account-modal.component.html
@@ -13,7 +13,9 @@
           class="appearance-none border border-gray-300 rounded w-full py-3 px-4 text-gray-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
           (change)="onAccountTypeChange($event)"
         >
-          <option value="" disabled selected class="text-gray-400 italic">Select Type</option>
+          <option value="" disabled selected class="text-gray-400 italic">
+            Select Type
+          </option>
           <option value="guest">Guest</option>
           <option value="staff">Staff</option>
         </select>
@@ -46,15 +48,15 @@
       />
     </div>
 
-    <div class="flex justify-end mt-6">
+    <div class="flex justify-end mt-4">
       <button
-        class="bg-gray-300 text-black px-4 py-2 rounded mr-2 hover:bg-gray-400"
+        class="bg-white border border-red-700 text-red-700 hover:bg-red-700 hover:text-white p-2 rounded-lg w-20 mr-1"
         (click)="close.emit()"
       >
         Cancel
       </button>
       <button
-        class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600"
+        class="bg-white border border-black text-black hover:bg-black hover:text-white p-2 rounded-lg w-20"
         (click)="submitAccount()"
         [disabled]="!accountType || !username"
       >
