--- a/src/staff_webapp/src/app/pages/home-tab/home-tab.component.html
+++ b/src/staff_webapp/src/app/pages/home-tab/home-tab.component.html
@@ -10,9 +10,9 @@
 <div>
   <div class="grid grid-rows-2 gap-6">
     <!-- Upper section -->
-    <div class="grid grid-cols-2 gap-6 h-1/2">
+    <div class="upper-section grid grid-cols-2 gap-6 h-1/2">
       <!-- Left column: Amenities -->
-      <div>
+      <div class="left-upper-section">
         <h2 class="text-2xl font-bold mb-4">Amenities</h2>
         <div class="bg-white rounded-xl shadow">
           <div class="max-h-[277px] overflow-y-auto">
@@ -50,7 +50,7 @@
       </div>
 
       <!-- Right column: 2x2 grid: Incident report -->
-      <div>
+      <div class="right-upper-section">
         <h2 class="text-2xl font-bold mb-4">Incident Reports</h2>
         <div class="grid grid-cols-2 gap-6 h-[277px]">
           <!-- To Do -->
@@ -129,7 +129,7 @@
     </div>
 
     <!-- Lower section: Task System -->
-    <div>
+    <div class="bottom-section">
       <h2 class="text-2xl font-bold mb-4">Recent Unclaimed Tasks</h2>
       <div class="rounded-xl shadow max-h-[300px] overflow-y-auto">
         <table class="table-auto w-full border-gray-300">
