Staff site now has its own endpoint

--- a/src/staff_webapp/src/app/pages/dashboard-page/dashboard-page.component.html
+++ b/src/staff_webapp/src/app/pages/dashboard-page/dashboard-page.component.html
@@ -2,7 +2,7 @@
 	<!-- Top Bar -->
 	<div class="flex justify-between items-center h-16 py-2 px-5">
 		<div class="flex flex-row items-center">
-			<img src="../../../assets/conciergevector.svg" alt="Concierge" class="h-20 object-contain" />
+			<img src="assets/conciergevector.svg" alt="Concierge" class="h-20 object-contain" />
 		</div>
 		<div>
 			<a href="#" id="logout" (click)="handleLogout()" class="bg-black text-white p-2 rounded-lg">
