--- a/src/staff_webapp/src/app/pages/login-page/login-page.component.html
+++ b/src/staff_webapp/src/app/pages/login-page/login-page.component.html
@@ -3,7 +3,7 @@
 	<form [formGroup]="loginForm" (ngSubmit)="handleLogin()"
 		class="border p-7 rounded-xl bg-white shadow-lg w-80 sm:w-96">
 		<div class="flex justify-center mb-5">
-			<img src="../../../assets/conciergevector.svg" alt="Concierge" class="h-30 object-contain" />
+			<img src="assets/conciergevector.svg" alt="Concierge" class="h-30 object-contain" />
 		</div>
 		<div class="mb-3">
 			<label htmlFor="room-num-input" class="block font-thin text-sm">Username</label>
