--- a/src/staff_webapp/src/app/pages/login-page/login-page.component.html
+++ b/src/staff_webapp/src/app/pages/login-page/login-page.component.html
@@ -1,5 +1,5 @@
 <div class="flex justify-center items-center h-screen flex-col bg-primary">
-	<h3 class="text-3xl mb-4 font-bold tracking-widest">Staff's Dashboard</h3>
+	<h3 class="text-3xl mb-4 font-bold tracking-widest">Staff Dashboard</h3>
 	<form [formGroup]="loginForm" (ngSubmit)="handleLogin()"
 		class="border p-7 rounded-xl bg-white shadow-lg w-80 sm:w-96">
 		<div class="flex justify-center mb-5">
